--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -14,10 +14,11 @@ jobs:
         run: |
           echo $(date +%u)
           echo "day=$(date +%u)" >> $GITHUB_OUTPUT
+          echo "${{vars.FORCED_DEPLOYMENT_TO_PROD_AND_SC}} ${{needs.weekend_deployment_check.outputs.day}} ${{vars.PAUSE_DAY_OF_THE_WEEK}}"
 
   deploy_test:
     runs-on: ubuntu-latest
     needs: [weekend_deployment_check]
     if: ${{ vars.FORCED_DEPLOYMENT_TO_PROD_AND_SC == true }}
     steps:
-      - run: echo "${{vars.FORCED_DEPLOYMENT_TO_PROD_AND_SC}} ${{needs.weekend_deployment_check.outputs.day}} ${{vars.PAUSE_DAY_OF_THE_WEEK}}"
+      - run: echo "deployed"
