--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -19,6 +19,6 @@ jobs:
   deploy_test:
     runs-on: ubuntu-latest
     needs: [weekend_deployment_check]
-    if: ${{ vars.FORCED_DEPLOYMENT_TO_PROD_AND_SC == 'true' }}
+    if: ${{ vars.FORCED_DEPLOYMENT_TO_PROD_AND_SC }}
     steps:
       - run: echo "deployed"
