update workflow_day to include time

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -8,19 +8,20 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       day: ${{ steps.check_day.outputs.day }}
+      time: ${{ steps.check_day.outputs.time }}
     steps:
       - name: Check Day of the Week
         id: check_day
         run: |
-          echo $(date +%u)
           echo "day=$(date +%u)" >> $GITHUB_OUTPUT
-          echo "${{vars.FORCED_DEPLOYMENT_TO_PROD_AND_SC}} ${{vars.PAUSE_DAY_OF_THE_WEEK}}"
+          echo "time=$(TZ="Asia/Kolkata" date +"%H:%M")" >> $GITHUB_OUTPUT
 
   deploy_test:
     runs-on: ubuntu-latest
     needs: [weekend_deployment_check]
-    if: |
-      ( vars.FORCED_DEPLOYMENT_TO_PROD_AND_SC == 'true' ||
-      needs.weekend_deployment_check.outputs.day < vars.PAUSE_DAY_OF_THE_WEEK )
+    # if: |
+    #   ( vars.FORCED_DEPLOYMENT_TO_PROD_AND_SC == 'true' ||
+    #   needs.weekend_deployment_check.outputs.day < vars.PAUSE_DAY_OF_THE_WEEK )
     steps:
       - run: echo "deployed"
+      - run: echo ${{steps.check_day.outputs.time}}
