--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -4,22 +4,19 @@ on:
   workflow_dispatch:
 
 jobs:
-  weekend_deployment_check:
+  first-job:
     runs-on: ubuntu-latest
     steps:
       - name: checkoutRepo
         uses: actions/checkout@v3
-      - name: Check deployment
-        run: ./.github/workflows/scripts/check_deployment.sh ${{vars.FORCED_DEPLOYMENT_TO_PROD_AND_SC}} ${{vars.PAUSE_DAY_OF_THE_WEEK}}
+      - name: add variable to env
+        run: export name=rajkumar
+      - name: access variable from env
+        run: echo $name
 
-  deploy_test:
+  second-job:
     runs-on: ubuntu-latest
-    needs: [weekend_deployment_check]
+    needs: [first-job]
     steps:
-      - uses: actions/checkout@v1
-      - id: set_state_in_progress
-        name: Set deployment status to [in_progress]
-        uses: rsotnychenko/deployment-status-update@0.2.1
-        with:
-          run_id: ${{ github.run_id }}
-          status: pending
+      - name: access variable from env
+        run: echo $name
