--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -13,12 +13,12 @@ jobs:
         uses: actions/checkout@v3
       - name: add variable to env
         run: |
-          echo ${name}
+          echo $name
           export name=rajkumar
-          echo ${name}
+          echo $name
       - name: access variable from env
         run: |
-          echo ${name}
+          echo $name
 
   second-job:
     runs-on: ubuntu-latest
