--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,6 +1,7 @@
 name: Automate_Deploy_Test
 
 on:
+  push:
   workflow_dispatch:
 
 jobs:
@@ -13,8 +14,8 @@ jobs:
         uses: actions/checkout@v3
       - name: add variable to env
         run: |
-          echo $name
-          export name=rajkumar
+          echo ${{env.name}}
+          echo name=rajkumar  >> ${{env.name}}
           echo $name
       - name: access variable from env
         run: |
