--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -15,9 +15,10 @@ jobs:
         uses: actions/checkout@v3
       - name: add variable to env
         run: |
+          echo "tests=16" >> $GITHUB_ENV
           echo ${{env.name}}
           echo "name=rajkumar" >> $GITHUB_ENV
-          echo ${{env.name}}
+          echo ${{env.name}} ${{env.tests}}
       - name: access variable from env
         run: |
           echo $name
