add tests in next step

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           echo $name
           echo $age
+          echo $tests
 
   second-job:
     runs-on: ubuntu-latest
