--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -9,14 +9,17 @@ jobs:
     uses: actions/checkout@v3
 
   first-job:
+    outputs:
+      tests: ${{ steps.step1.outputs.tests }}
     env:
       name: raj
       age: 20
     runs-on: ubuntu-latest
     steps:
       - name: add variable to env
+        id: step1
         run: |
-          echo "tests=16" >> $GITHUB_ENV
+          echo "tests=16" >> $GITHUB_OUTPUT
           echo ${{env.name}}
           echo "name=rajkumar" >> $GITHUB_ENV
           echo ${{env.name}} ${{env.tests}}
@@ -28,7 +31,7 @@ jobs:
 
   second-job:
     runs-on: ubuntu-latest
-    needs: [first-job]
+    needs: first-job
     steps:
       - name: access variable from env
-        run: echo ${{env.tests}}
+        run: echo ${{needs.first-job.outputs.tests}}
