update ip_check workflow to print github event payload

--- a/.github/workflows/ip_check.yaml
+++ b/.github/workflows/ip_check.yaml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: print-ip
         run: ip add
+      - name: payload
+        run: echo ${github.event}
 
   second-job:
     environment: test
