--- a/.github/workflows/ip_check.yaml
+++ b/.github/workflows/ip_check.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: print-ip
         run: ip add
       - name: payload
-        run: echo ${github.event}
+        run: echo ${{github.event}}
 
   second-job:
     environment: test
