--- a/.github/workflows/ip_check.yaml
+++ b/.github/workflows/ip_check.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: print-ip
         run: ip add
       - name: payload
-        run: echo ${{ toJSON(github.event) }}
+        run: echo "${{ toJSON(github.event) }}"
 
   second-job:
     environment: test
