--- a/.github/workflows/dependent_jobs.yaml
+++ b/.github/workflows/dependent_jobs.yaml
@@ -12,23 +12,17 @@ jobs:
         run: echo "job1"
 
   job2:
-    if: false
-    runs-on: ubuntu-latest
-    steps:
-      - name: step-1
-        run: echo "job2"
+    uses: ./.github/workflows/wrapper.yaml
   
   job3:
     runs-on: ubuntu-latest
     needs: [ job1, job2 ]
-    if: always() && (needs.job2.result == 'success' || needs.job2.result == 'skipped')
     steps:
       - name: step-1
         run: echo "job3"
 
   job4:
     runs-on: ubuntu-latest
-    if: success()
     needs: job3
     steps:
       - name: step-1
