Add job1 in wrapper

--- a/.github/workflows/wrapper.yaml
+++ b/.github/workflows/wrapper.yaml
@@ -5,6 +5,12 @@ on:
 
 jobs:
 
+    if: false
+    runs-on: ubuntu-latest
+    steps:
+      - name: step-1
+        run: echo "job1"
+
   job2:
     if: false
     runs-on: ubuntu-latest
